--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" type="text/css" href="css/style.css"/>
+<script type="text/javascript" src="js/scripts.js"></script>
+</head>
+<body>
+<div class="wrapper">
+	<div class="cube">
+		<div class="front"></div>
+		<div class="back"></div>
+		<div class="border top"></div>
+		<div class="border bottom"></div>
+		<div class="border left"></div>
+		<div class="border right"></div>
+	</div>
+</div>
+</body>
+</html>
